--- a/package.json
+++ b/package.json
@@ -9,15 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/lab": "^7.0.0-beta.12",
+    "@mui/material": "^7.1.0",
+    "@mui/x-data-grid": "^8.4.0",
+    "@tabler/icons-react": "^3.33.0",
+    "formik": "^2.4.6",
+    "lodash": "^4.17.21",
+    "next": "15.3.2",
+    "notistack": "^3.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.2"
+    "react-helmet-async": "^2.0.5",
+    "react-mui-sidebar": "1.6.3",
+    "react-redux": "^9.2.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4"
   }
 }
