--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "formik": "^2.4.6",
     "lodash": "^4.17.21",
     "next": "15.3.2",
+    "next-intl": "^4.1.0",
     "notistack": "^3.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
