--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.1.0",
     "@mui/x-data-grid": "^8.4.0",
     "@tabler/icons-react": "^3.33.0",
+    "apexcharts": "^4.7.0",
     "cloudinary": "^2.6.1",
     "formik": "^2.4.6",
     "lodash": "^4.17.21",
@@ -23,6 +24,7 @@
     "next-intl": "^4.1.0",
     "notistack": "^3.0.2",
     "react": "^19.0.0",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^19.0.0",
     "react-helmet-async": "^2.0.5",
     "react-mui-sidebar": "1.6.3",
