--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "@mui/icons-material": "^7.1.0",
     "@mui/lab": "^7.0.0-beta.12",
     "@mui/material": "^7.1.0",
-    "@mui/x-data-grid": "^8.4.0",
+    "@mui/x-data-grid": "^8.5.0",
     "@tabler/icons-react": "^3.33.0",
     "apexcharts": "^4.7.0",
     "cloudinary": "^2.6.1",
+    "file-saver": "^2.0.5",
     "formik": "^2.4.6",
     "lodash": "^4.17.21",
     "next": "15.3.2",
