--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react-helmet-async": "^2.0.5",
     "react-mui-sidebar": "1.6.3",
     "react-redux": "^9.2.0",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "yup": "^1.6.1"
   },
   "devDependencies": {
