--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tabler/icons-react": "^3.33.0",
     "apexcharts": "^4.7.0",
     "cloudinary": "^2.6.1",
+    "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
     "formik": "^2.4.6",
     "lodash": "^4.17.21",
